src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_messages_test__for_with_unexpected_token_2.snap
---
source: src/parser/tests/parse_errors/parse_error_messages_test.rs
expression: diagnostics
---
error: Unexpected token: expected KeywordTo but found BRAVO
  ┌─ <internal>:3:20
  │
3 │         FOR z := x BRAVO y DO
  │                    ^^^^^ Unexpected token: expected KeywordTo but found BRAVO

error: Unexpected token: expected KeywordSemicolon but found 'y DO
            x'
  ┌─ <internal>:3:26
  │  
3 │           FOR z := x BRAVO y DO
  │ ╭──────────────────────────^
4 │ │             x;
  │ ╰─────────────^ Unexpected token: expected KeywordSemicolon but found 'y DO
            x'

error: Unexpected token: expected Literal but found END_FOR
  ┌─ <internal>:6:9
  │
6 │         END_FOR
  │         ^^^^^^^ Unexpected token: expected Literal but found END_FOR

error: Unexpected token: expected KeywordSemicolon but found 'END_FOR'
  ┌─ <internal>:6:9
  │
6 │         END_FOR
  │         ^^^^^^^ Unexpected token: expected KeywordSemicolon but found 'END_FOR'

error: Missing expected Token [KeywordSemicolon, KeywordColon]
  ┌─ <internal>:7:9
  │
7 │         END_PROGRAM
  │         ^^^^^^^^^^^ Missing expected Token [KeywordSemicolon, KeywordColon]

error: Unexpected token: expected KeywordSemicolon but found 'END_PROGRAM'
  ┌─ <internal>:7:9
  │
7 │         END_PROGRAM
  │         ^^^^^^^^^^^ Unexpected token: expected KeywordSemicolon but found 'END_PROGRAM'

error: Could not resolve reference to BRAVO
  ┌─ <internal>:3:20
  │
3 │         FOR z := x BRAVO y DO
  │                    ^^^^^ Could not resolve reference to BRAVO

error: Could not resolve reference to y
  ┌─ <internal>:5:13
  │
5 │             y;
  │             ^ Could not resolve reference to y


